--- a/package.json
+++ b/package.json
@@ -3,5 +3,11 @@
   "version": "1.0.0",
   "repository": "git@github.com:Plut505/OpenrhynnServerContent.git",
   "author": "steel97 <ivan.yurkov@steel-team.net>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "fmt": "prettier -w ./data/scripts/**/*"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
+  }
 }
